err/evasion-director.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Mako-1.0.7.egg-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/configobj-5.0.6.egg-info'...
Listing './lib/python3.5/site-packages/evasion'...
Listing './lib/python3.5/site-packages/evasion/agency'...
Listing './lib/python3.5/site-packages/evasion/agency/agents'...
Listing './lib/python3.5/site-packages/evasion/agency/agents/base'...
Compiling './lib/python3.5/site-packages/evasion/agency/agents/base/service.py'...
***   File "./lib/python3.5/site-packages/evasion/agency/agents/base/service.py", line 170
    except socket.error, e:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/evasion/agency/agents/testing'...
Listing './lib/python3.5/site-packages/evasion/agency/agents/tests'...
Listing './lib/python3.5/site-packages/evasion/agency/tests'...
Listing './lib/python3.5/site-packages/evasion/director'...
Compiling './lib/python3.5/site-packages/evasion/director/config.py'...
***   File "./lib/python3.5/site-packages/evasion/director/config.py", line 305
    except configobj.DuplicateError, e:
                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/evasion/director/controllers'...
Compiling './lib/python3.5/site-packages/evasion/director/controllers/viewpoint.py'...
***   File "./lib/python3.5/site-packages/evasion/director/controllers/viewpoint.py", line 236
    except viewpointdirect.BrowserNotPresent, e:
                                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/evasion/director/docs'...
Compiling './lib/python3.5/site-packages/evasion/director/lockabledict.py'...
***   File "./lib/python3.5/site-packages/evasion/director/lockabledict.py", line 45
    raise sys.exc_type, sys.exc_value
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/evasion/director/manager.py'...
***   File "./lib/python3.5/site-packages/evasion/director/manager.py", line 35
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/evasion/director/morbid.py'...
***   File "./lib/python3.5/site-packages/evasion/director/morbid.py", line 248
    print "Starting Morbid Stomp server @ stomp://" + options.interface + ":" + str(options.port)
                                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/evasion/director/scripts'...
Compiling './lib/python3.5/site-packages/evasion/director/signals.py'...
***   File "./lib/python3.5/site-packages/evasion/director/signals.py", line 561
    except config.ControllerReloadError, e:
                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/evasion/director/templatecfg'...
Listing './lib/python3.5/site-packages/evasion/director/tests'...
Compiling './lib/python3.5/site-packages/evasion/director/tests/testdirector.py'...
***   File "./lib/python3.5/site-packages/evasion/director/tests/testdirector.py", line 549
    print "Calling controllerState..."
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/evasion/director/tools'...
Compiling './lib/python3.5/site-packages/evasion/director/tools/proc.py'...
***   File "./lib/python3.5/site-packages/evasion/director/tools/proc.py", line 74
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/evasion_director-1.1.6.egg-info'...
Listing './lib/python3.5/site-packages/mako'...
Listing './lib/python3.5/site-packages/mako/ext'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
